--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.3",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
