--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
+    "js-cookie": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
