--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@hookform/resolvers": "^3.4.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "js-cookie": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "zod": "^3.23.8"
   },
