--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
